kubernetes-security/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-security
  namespace: homework
  labels: &labels
    app.kubernetes.io/name: kubernetes-security
    app.kubernetes.io/instance: kubernetes-security-instance
spec:
  replicas: 3
  selector:
    matchLabels: *labels
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        homework: "true"
      serviceAccountName: monitoring
      containers:
        - name: webserver
          image: nginx:1.14.2
          ports:
          - containerPort: 8000
            name: http-k8s-sec
          volumeMounts:
          - name: files
            mountPath: /homework
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done; rm /homework/index.html"]
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000  
      volumes:
      - name: files
        emptyDir: {}
      - name: nginx-conf
        configMap:
            name: nginx-conf
