kubernetes-security/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-security-service
  namespace: homework
spec:
  selector:
    app.kubernetes.io/name: kubernetes-security
    app.kubernetes.io/instance: kubernetes-security-instance
  ports:
    - name: http-k8s-sec-s
      protocol: TCP
      port: 80
      targetPort: http-k8s-sec
  type: ClusterIP
